--- a/MSR/ebean.properties
+++ b/MSR/ebean.properties
@@ -6,7 +6,7 @@
 #load.properties.override=${CATALINA_HOME}/conf/myapp.ebean.properties  
   
   
-ebean.ddl.generate=false  
+ebean.ddl.generate=true  
 ebean.ddl.run=false  
   
 ebean.debug.sql=true  
