--- a/SPAHomePage/package.json
+++ b/SPAHomePage/package.json
@@ -8,6 +8,7 @@
     "email": "ssanjeev@stanford.edu"
   },
   "dependencies": {
-    "express": "3.4.4"
+    "express": "3.4.4",
+    "forever": "0.10.11"
   }
 }
