--- a/SPAHomePage/package.json
+++ b/SPAHomePage/package.json
@@ -8,6 +8,8 @@
     "email": "ssanjeev@stanford.edu"
   },
   "dependencies": {
-    "express": "3.4.4"
+    "express": "3.4.4",
+    "github": "0.1.13",
+    "async": "~0.2.10"
   }
 }
