--- a/PTKB/PTKB_Server/package.json
+++ b/PTKB/PTKB_Server/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "express": "3.4.0",
-    "ejs": "*",
+    "ejs": "0.8.5",
     "mongodb": "*",
-    "request": "*"
+    "request": "*",
+    "async": "*"
   }
 }
